Huge update: Minor fix for Home.js bestseller carousel load flickering implemented; Add to Cart functionality for Product.js and ProductDetail.js fully overhauled to rectify persistent bugs; Fully functional filter system for filtering by product source type and media format, and sorting by A-Z, Date Added and reverse for both, into ProductList.js; Implemented token validation to Dash.js and OrderDetails.js to prevent app from crashing when accessing components which require a logged-in user while user's token is invalid; Updated erroneous order detail paths in OrderDetail.js; removed several redundant props, functions and comments from each of the listed updated components as part of a significant refactoring effort.

--- a/src/product/ProductList.css
+++ b/src/product/ProductList.css
@@ -2,9 +2,14 @@ h1 {
     text-align: center;
 }
 
-#shopFilter {
+/* #sourceFilter, #formatFilter, #sortBy {
     margin: 20px;
+} */
+
+.filter {
+  margin-bottom: 20px;
 }
+
 .btn-primary:focus, .btn-secondary:focus, input:focus{
   outline:none;
 }
@@ -70,12 +75,16 @@ h1 {
 
 }
 
-.filter-container{
+.filter-flex-container{
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+}
 
+/* .filter-container{
 display: flex;
 justify-content: center;
-margin-bottom: 30px;
-}
+} */
 
 
 #addToCart{
